--- a/study/12-8/docker-compose.yml
+++ b/study/12-8/docker-compose.yml
@@ -3,10 +3,10 @@ services:
   frontend:
     image: nginx
     volumes:
-      - ./frontend/site.conf:/etc/nginx/sites-enabled/site.conf
-      - ./proxy_params.conf:/etc/nginx/proxy_params.conf
+      - ./frontend/default.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend/proxy_params.conf:/etc/nginx/proxy_params
     ports:
-      - "8081:80"
+      - "8080:80"
     links:
       - backend:backend
     restart: always
@@ -14,5 +14,5 @@ services:
   backend:
     image: nginx
     volumes:
-      - ./backend/site.conf:/etc/nginx/sites-enabled/site.conf
+      - ./backend/default.conf:/etc/nginx/conf.d/default.conf
       - ./html:/var/www/html
